# Jober_java

./: .env  README.md  Todo.txt  config.py  main.py  metadata_auto_generator.py  pdf_extraction_test.py  pyproject.toml  requirements.txt  test.ipynb  test_page_metadata.py  test_template.py  validation_example.py
core/: __init__.py  base_processor.py  entity_extractor.py  template_generator.py
data/: add_infotalk.md  alrimtalk.md  black_list.md  content-guide.md  info_simsa.md  message.md  message_yuisahang.md  run_message.md  zipguide.md
predata/: cleaned_add_infotalk.md  cleaned_black_list.md  cleaned_content-guide.md  cleaned_info_simsa.md  cleaned_message.md  cleaned_message_yuisahang.md  cleaned_run_message.md  cleaned_white_list.md  cleaned_zipguide.md  pdf_extraction_results.txt
predata2/: cleaned_message.md  cleaned_run_message.md  cleaned_white_list.md  cleaned_zipguide.md
predata_backup/: cleaned_add_infotalk_backup.md  cleaned_add_infotalk_backup_backup.md  cleaned_black_list_backup.md  cleaned_content-guide_backup.md  cleaned_info_simsa_backup.md  cleaned_message_yuisahang_backup.md
utils/: __init__.py  data_processor.py
