[tool.poetry]
name = "jober-java"
version = "0.1.0"
description = "Java job matching project"
authors = ["David"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
# Core packages - let Poetry resolve compatible versions
# Essential packages for alrimtalk template generator
langchain = "^0.3.27"
langchain-core = "^0.3.74"
langchain-community = "^0.3.27"
langchain-openai = "^0.3.31"
langchain-text-splitters = "^0.3.9"

# Vector database and embeddings
faiss-cpu = "^1.8.0"
sentence-transformers = "^3.0.0"

# Text processing
pypdf = "^4.2.0,<5.0.0"
tokenizers = "^0.19.1,<0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"